syntax = "proto3";

import "rococo-countries.proto";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.rococo.grpc";
option java_outer_classname = "RococoMuseumsProto";

service RococoMuseumsService {
  rpc GetAll (MuseumsPageRequest) returns (MuseumsPageResponse) {}
  rpc FindMuseumById (MuseumByIdRequest) returns (MuseumResponse) {}
  rpc UpdateMuseum (MuseumRequest) returns (MuseumResponse) {}
  rpc AddMuseum (MuseumRequest) returns (MuseumResponse) {}
}

message MuseumRequest {
  Museum museum = 1;
}

message GeoLocation {
  string city = 1;
  Country country = 2;
}

message MuseumResponse {
  Museum museum = 1;
}

message MuseumsPageRequest {
  optional string title = 1;
  int32 page = 2;
  int32 size = 3;
}

message MuseumsPageResponse {
  int64 totalElements = 1;
  int64 totalPages = 2;
  bool first = 3;
  bool last = 4;
  int64 size = 5;
  repeated Museum museums = 6;
}

message MuseumByIdRequest {
  string museumId = 1;
}

message Museum {
  string id = 1;
  string title = 2;
  string description = 3;
  string photo = 4;
  GeoLocation geo = 5;
}